@@ -1,4 +1,5 @@
 2.1.14
+ * Add cassandra-stress keystore option (CASSANDRA-9325)
  * COPY FROM fails when importing blob (CASSANDRA-11375)
  * Backport CASSANDRA-10679 (CASSANDRA-9598)
  * Don't do defragmentation if reading from repaired sstables (CASSANDRA-10342)
